Revision of section 2.0

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -7,7 +7,7 @@ issue = {},
 pages = {437-445}, 
 year = {1994}, 
 abstract = {}, 
-doi = {}, 
+doi = {10.2307/1941948}, 
 location = {}, 
 keywords = {}}
 
@@ -131,7 +131,7 @@ issue = {},
 pages = {1412-1423}, 
 year = {1987}, 
 abstract = {}, 
-doi = {}, 
+doi = {10.2307/1939225}, 
 location = {}, 
 keywords = {}}
 
@@ -203,4 +203,32 @@ address = {Princeton, NJ, USA},
 year = {1972}, 
 abstract = {}, 
 keywords = {}}
+
+@Article{Lefkovitch1965,
+author = {Lefkovitch, L. P. }, 
+title = {{The study of population growth in organisms grouped by stages}}, 
+journal = {Biometrics}, 
+volume = {21}, 
+issue = {1}, 
+pages = {1}, 
+year = {1965}, 
+abstract = {}, 
+doi = {10.2307/2528348}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Leslie1945,
+author = {Leslie, P. H. }, 
+title = {{On the use of matrices in certain population mathematics}}, 
+journal = {Biometrika}, 
+volume = {33}, 
+issue = {3}, 
+pages = {183}, 
+year = {1945}, 
+abstract = {}, 
+doi = {10.2307/2332297}, 
+location = {}, 
+keywords = {}}
+
 
